Revision history for Perl extension CGI::Application::Plugin::Header.

0.63003  Oct 30th, 2013

  - add test for CGI::Application::Plugin::Redirect

0.63002  Oct 30th, 2013

  - #header is rw

0.63001  Oct 29th, 2013

  - requires CGI::Header 0.63 or higher

0.01  May 26th, 2013

  - original version